--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -2,4 +2,4 @@ FROM postgres:16
 
 RUN apt-get update && apt-get install -y --no-install-recommends postgresql-16-postgis 
 
-COPY ./user.sql /docker-entrypoint-initdb.d/
+COPY ./schema.sql /docker-entrypoint-initdb.d/
