--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,21 +27,22 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-  e2e:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
+  # e2e:
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version-file: 'go.mod'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - name: Build Docker Image 
-      run: docker compose build
+  #   - name: Set up Go
+  #     uses: actions/setup-go@v4
+  #     with:
+  #       go-version-file: 'go.mod'
 
-    - name: Run Muzz with Docker
-      run: docker compose up -d
+  #   - name: Build Docker Image 
+  #     run: docker compose build
 
-    - name: Run e2e Tests
-      run: cd demo && docker build . -t demo && docker run --network host -t demo
+  #   - name: Run Muzz with Docker
+  #     run: docker compose up -d
+
+  #   - name: Run e2e Tests
+  #     run: cd demo && docker build . -t demo && docker run --network host -t demo
