--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,22 +27,22 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-  # e2e:
+  e2e:
 
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
 
-  #   - name: Set up Go
-  #     uses: actions/setup-go@v4
-  #     with:
-  #       go-version-file: 'go.mod'
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version-file: 'go.mod'
 
-  #   - name: Build Docker Image 
-  #     run: docker compose build
+    - name: Build Docker Image 
+      run: docker compose build
 
-  #   - name: Run Muzz with Docker
-  #     run: docker compose up -d
+    - name: Run Muzz with Docker
+      run: docker compose up -d
 
-  #   - name: Run e2e Tests
-  #     run: cd demo && docker build . -t demo && docker run --network host -t demo
+    - name: Run e2e Tests
+      run: cd demo && docker build . -t demo && docker run --network host -t demo
