--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,7 @@ jobs:
       run: go test -v ./...
 
   e2e:
+    needs: build
 
     runs-on: ubuntu-latest
     steps:
@@ -46,3 +47,4 @@ jobs:
 
     - name: Run e2e Tests
       run: cd demo && docker build . -t demo && docker run --network host -t demo
+
